--- a/src/Components/CollectionItem/CollectionItem.css
+++ b/src/Components/CollectionItem/CollectionItem.css
@@ -4,6 +4,7 @@
   align-items: center;
   cursor: pointer;
 }
+
 .collection div + div {
   margin-left: 1rem;
 }
@@ -12,4 +13,10 @@
   background-color: black;
   padding: 0.3rem 0.5rem;
   border-radius: 0.4rem;
+}
+
+.activeCollection {
+  background-color: #272732;
+  padding: .7rem 1rem!important;
+  transition: all .5s ease-in-out;
 }
