We making progress

--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,5 @@
+/* GENEREAL STYLING */
+
 * {
   margin: 0;
   padding: 0;
@@ -14,4 +16,20 @@
 body{
   /* height: fit-content; */
   overflow: hidden;
+}
+
+::-webkit-scrollbar {
+  width: 0.7rem;
+}
+
+::-webkit-scrollbar-track {
+  margin: 1.3rem 0;
+  border: 2px solid #404052;
+  border-radius: 2rem;
+}
+
+::-webkit-scrollbar-thumb {
+  width: 1rem;
+  border-radius: 2rem;
+  background: #2728337d;
 }
