--- a/src/Components/CollectionTasks/CollectionTasks.css
+++ b/src/Components/CollectionTasks/CollectionTasks.css
@@ -1,3 +1,4 @@
+
 .todo-tasks__header {
   display: flex;
   align-items: center;
@@ -8,20 +9,39 @@
   width: 2.5rem;
   height: 2.5rem;
   background-color: #20212c;
-  padding: .5rem;
+  padding: 0.5rem;
   border-radius: 1rem;
   cursor: pointer;
 }
 
-.todo-tasks__list{
-    margin-top: 2rem;
-    /* background: #000; */
+.taskContainer{
+  /* background: #000; */
+  margin-top: 1rem;
+  padding-top: 0;
+  padding-right: 1rem;
+  width: 100%;
+  height: 80vh;
+  overflow: auto;
 }
 
-.todo-tasks__list__item{
-    width: 100%;
-    margin: 0;
-    background-color: #20212c;
-    padding: 1rem;
-    border-radius: 1rem;
+.all__tasks {
+  padding-top: 0;
+  margin-top: 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 2rem;
+}
+/* .todo-tasks__list{
+  background: beige;
+} */
+.todo-tasks__list > h3{
+ padding-bottom: .5rem;
+}
+
+.todo-tasks__list__item {
+  width: 100%;
+  margin: 0;
+  background-color: #20212c;
+  padding: 1rem;
+  border-radius: 1rem;
 }
