--- a/src/Components/TaskForm/TaskForm.css
+++ b/src/Components/TaskForm/TaskForm.css
@@ -10,13 +10,17 @@
   transition: height 700ms ease-in-out;
 }
 
+input{
+  width: 100%;
+}
+
 .add-task {
   display: flex;
   gap: 1rem;
   align-items: center;
   padding: 0.7rem;
   width: 100%;
-  /* background: #000; */
+  border-radius: inherit;
 }
 
 .add-task__icon {
@@ -41,17 +45,16 @@
   gap: 1rem;
 }
 
-.due_date_time > input {
+.due_date_time > div {
   width: 50%;
 }
 
 .add-task__form input {
   background: none;
-  padding: .7rem;
+  padding: 0.7rem;
   border: 1px solid #20212c;
   outline: none;
-  border-radius: .5rem;
-
+  border-radius: 0.5rem;
 }
 
 .add-task__form__actions {
@@ -65,4 +68,10 @@
   border: none;
   width: 10rem;
   padding: 0.7rem;
+}
+
+.inputErr {
+  color: rgba(251, 13, 13, 0.442);
+  font-size: .7rem;
+  padding: .3rem 0;
 }
