--- a/src/Components/CollectionTasks/CollectionTasks.css
+++ b/src/Components/CollectionTasks/CollectionTasks.css
@@ -1,4 +1,6 @@
-
+.todo-tasks{
+  height: inherit;
+}
 .todo-tasks__header {
   display: flex;
   align-items: center;
@@ -15,13 +17,11 @@
 }
 
 .taskContainer{
-  /* background: #000; */
   margin-top: 1rem;
   padding-top: 0;
   padding-right: 1rem;
-  width: 100%;
-  height: 80vh;
-  overflow: auto;
+  overflow-y: auto;
+  height: 80%;
 }
 
 .all__tasks {
@@ -31,9 +31,7 @@
   flex-direction: column;
   gap: 2rem;
 }
-/* .todo-tasks__list{
-  background: beige;
-} */
+
 .todo-tasks__list > h3{
  padding-bottom: .5rem;
 }
@@ -44,4 +42,10 @@
   background-color: #20212c;
   padding: 1rem;
   border-radius: 1rem;
+}
+
+@media screen and (max-width: 700px) {
+  .taskContainer {
+    padding-right: 0;
+  }
 }
