--- a/src/Components/Main/Main.css
+++ b/src/Components/Main/Main.css
@@ -1,6 +1,7 @@
 .main-content__container {
   max-height: 100vh;
   flex-grow: 1;
+  width: 100%;
 }
 
 .main-content__inner {
@@ -8,4 +9,11 @@
   max-width: 35rem;
   width: 90%;
   padding: 1rem;
+  height: 100%;
+}
+
+@media screen and (max-width: 460px) {
+  .main-content__inner {
+    padding: 1rem 0;
+  }
 }
