--- a/src/App.css
+++ b/src/App.css
@@ -33,3 +33,10 @@ body{
   border-radius: 2rem;
   background: #2728337d;
 }
+
+.overlay{
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #0000006b;
+}
