--- a/src/Components/CollectionItem/CollectionItem.css
+++ b/src/Components/CollectionItem/CollectionItem.css
@@ -2,21 +2,20 @@
   display: flex;
   /* border: 2px solid;/ */
   align-items: center;
-  cursor: pointer;
-}
-
-.collection div + div {
-  margin-left: 1rem;
+  gap: 1rem;
 }
 
 .collection__icon {
-  background-color: black;
-  padding: 0.3rem 0.5rem;
-  border-radius: 0.4rem;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 2.1rem;
+  height: 2.2rem;
+  border-radius: 0.7rem;
 }
 
 .activeCollection {
   background-color: #272732;
-  padding: .7rem 1rem!important;
-  transition: all .5s ease-in-out;
+  padding: 0.7rem 1rem !important;
+  transition: all 0.5s ease-in-out;
 }
