--- a/src/Components/Collections/Collections.module.css
+++ b/src/Components/Collections/Collections.module.css
@@ -1,3 +1,22 @@
+.collections__container {
+  height: 70%;
+  overflow: auto;
+  padding-right: 2rem;
+  padding-bottom: 2rem;
+}
+
+@media screen and (max-width:1000px) {
+  .collections__container {
+  padding-right: 0;
+}
+}
+
+.collections-header {
+  font-size: 1.2rem;
+  margin-bottom: 2rem;
+  font-weight: 500;
+}
+
 .collections {
   width: inherit;
   display: flex;
@@ -5,16 +24,17 @@
   /* justify-content: space-between; */
   gap: 1rem;
   flex-wrap: wrap;
+  margin-top: 1rem;
 }
 
-.collections > div,
-.collections > button {
+.collections > div {
   flex: 1 0 25%;
   padding: 1rem;
   height: 8rem;
   background: #20212c;
   border-radius: 1rem;
   cursor: pointer;
+  min-width: 8rem;
 }
 
 .collection__details {
@@ -42,20 +62,20 @@
   align-items: center;
 }
 
-.done{
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    width: 1.2rem;
-    height: 1.2rem;
-    background: #000;
-    border-radius: 50%;
-    border: 2px solid #20212c8a;
-    font-size: .6rem;
+.done {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 1.2rem;
+  height: 1.2rem;
+  background: #000;
+  border-radius: 50%;
+  border: 2px solid #20212c8a;
+  font-size: 0.6rem;
 }
 
-.done > svg{
-    color: white;
+.done > svg {
+  color: white;
 }
 
 .percentage {
@@ -81,4 +101,79 @@
   border: 2px solid #20212c;
   font-size: 1.5rem;
   background: none !important;
+  width: 100%;
+  height: 7rem;
+  margin-top: 1rem;
+  border-radius: 1rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.collection__form label {
+  font-size: 0.8rem;
+  font-weight: 500;
+}
+
+.collection__form input,
+.select {
+  display: block;
+  padding: 0.5rem;
+  border-radius: 0.7rem;
+  border: 2px solid #20212c;
+  background: none;
+  height: 2.5rem;
+  position: relative;
+  width: 100%;
+}
+
+.select {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.select input{
+    font-size: .7rem;
+    width: 50%;
+    border: none;
+}
+
+input:focus {
+  outline: none;
+}
+
+.options {
+  width: 100%;
+  border-bottom-left-radius: 1rem;
+  border-bottom-right-radius: 1rem;
+  min-height: 1rem;
+  border: 2px solid #20212c;
+  /* position: absolute; */
+  /* top: 0; */
+  display: flex;
+  flex-wrap: wrap;
+  /* column-gap: .5rem; */
+  gap: 0.2rem;
+}
+
+.options > * {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background: #20212c;
+  flex: 1 0 auto;
+  padding: 0 1rem;
+  min-height: 2rem;
+  border: none;
+  gap: .2rem;
+  /* background: #20212c; */
+}
+
+.options > :nth-child(5) {
+  border-bottom-left-radius: 0.7rem;
+}
+.options > :last-child {
+  border-bottom-right-radius: 0.7rem;
 }
