--- a/src/Components/CollectionTasks/CollectionTasks.css
+++ b/src/Components/CollectionTasks/CollectionTasks.css
@@ -11,7 +11,7 @@
 .back-to-previous-page {
   width: 2.5rem;
   height: 2.5rem;
-  background-color: #20212c;
+  background-color: var(--primary-color);
   padding: 0.5rem;
   border-radius: 1rem;
   cursor: pointer;
@@ -40,7 +40,7 @@
 .todo-tasks__list__item {
   width: 100%;
   margin: 0;
-  background-color: #20212c;
+  background-color: var(--primary-color);
   padding: 1rem;
   border-radius: 1rem;
 }
