--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,4 @@
 /* GENEREAL STYLING */
-
 * {
   margin: 0;
   padding: 0;
@@ -12,8 +11,12 @@
   box-sizing: border-box;
 }
 
+:root {
+  --primary-color: #20212c;
+  --secondary-color: #20212c;
+}
 
-body{
+body {
   /* height: fit-content; */
   overflow: hidden;
 }
@@ -34,7 +37,7 @@ body{
   background: #2728337d;
 }
 
-.overlay{
+.overlay {
   position: absolute;
   width: 100%;
   height: 100%;
