--- a/src/Components/Collections/Collections.module.css
+++ b/src/Components/Collections/Collections.module.css
@@ -31,7 +31,7 @@
   flex: 1 0 25%;
   padding: 1rem;
   height: 8rem;
-  background: #20212c;
+  background: var(--primary-color);
   border-radius: 1rem;
   cursor: pointer;
   min-width: 8rem;
@@ -91,14 +91,14 @@
 .percentage::before {
   content: "";
   position: absolute;
-  background: #20212c;
+  background: var(--primary-color);
   width: 60%;
   height: 60%;
   border-radius: inherit;
 }
 
 .add-collection {
-  border: 2px solid #20212c;
+  border: 2px solid var(--primary-color);
   font-size: 1.5rem;
   background: none !important;
   width: 100%;
@@ -120,7 +120,7 @@
   display: block;
   padding: 0.5rem;
   border-radius: 0.7rem;
-  border: 2px solid #20212c;
+  border: 2px solid var(--primary-color);
   background: none;
   height: 2.5rem;
   position: relative;
@@ -148,7 +148,7 @@ input:focus {
   border-bottom-left-radius: 1rem;
   border-bottom-right-radius: 1rem;
   min-height: 1rem;
-  border: 2px solid #20212c;
+  border: 2px solid var(--primary-color);
   /* position: absolute; */
   /* top: 0; */
   display: flex;
@@ -162,13 +162,13 @@ input:focus {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background: #20212c;
+  background: var(--primary-color);
   flex: 1 0 auto;
   padding: 0 1rem;
   min-height: 2rem;
   border: none;
   gap: .2rem;
-  /* background: #20212c; */
+  /* background: var(--primary-color); */
 }
 
 .options > :nth-child(5) {
