--- a/src/Components/SideBar/SideBar.css
+++ b/src/Components/SideBar/SideBar.css
@@ -1,6 +1,6 @@
 .side-container {
-  background: #20212c;
-  height: calc(100vh - 2.5rem);
+  background: var(--primary-color);
+  height: 100vh;
   width: 17rem;
   box-shadow: rgba(0, 0, 0, 0.24) 0px -1px 8px;
   transition: 500ms ease-in-out;
