--- a/src/App.css
+++ b/src/App.css
@@ -1,19 +1,14 @@
 /* GENEREAL STYLING */
+:root {
+  --primary-color: #20212c;
+  --secondary-color: #20212c;
+}
+
 * {
   margin: 0;
   padding: 0;
   scroll-behavior: smooth;
-}
-
-*,
-*::before,
-*::after {
   box-sizing: border-box;
-}
-
-:root {
-  --primary-color: #20212c;
-  --secondary-color: #20212c;
 }
 
 body {
@@ -42,4 +37,9 @@ body {
   width: 100%;
   height: 100%;
   background: #0000006b;
+}
+
+a {
+  text-decoration: none;
+  color: inherit;
 }
