--- a/src/Components/UI/Form/Form.module.css
+++ b/src/Components/UI/Form/Form.module.css
@@ -1,21 +1,59 @@
-.form__container {
-  margin-top: 2rem;
+/* .form__container {
   display: flex;
   gap: 1rem;
   align-items: center;
-  border: 2px solid var(--primary-color);
-  padding: 1rem;
-  border-radius: 1rem;
   cursor: pointer;
-  transition: height 700ms ease-in-out;
   
-}
+} */
 
-input{
+.form {
+  border-radius: 1rem;
+  padding: 1rem;
+  transition: height 700ms ease-in-out;
+  margin-top: 2rem;
+  border: 5px solid var(--primary-color);
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  gap: 1rem;
   width: 100%;
 }
 
-.add-task {
+.form input, .form select{
+  position: relative;
+  border: 3px solid var(--primary-color);
+  width: 100%;
+  padding: .5rem;
+  height: 2.5rem;
+  border-radius: .5rem;
+  font-size: 1rem;
+  background: none;
+}
+
+.form label{
+  font-weight: 700;
+}
+
+.form div:has( > label){
+  display: flex;
+  flex-direction: column;
+  gap: .5rem;
+}
+
+.form > div:has(div){
+  display: flex;
+}
+
+.form button{
+  font-size: .7rem;
+}
+
+.form > div:has(div) > *{
+  flex: 1;
+}
+
+
+/* .add-task {
   display: flex;
   gap: 1rem;
   align-items: center;
@@ -32,13 +70,7 @@ input{
   color: var(--primary-color);
 }
 
-.form {
-  position: relative;
-  display: flex;
-  flex-direction: column;
-  gap: 1rem;
-  width: 100%;
-}
+
 
 .form__extras {
   display: flex;
@@ -77,4 +109,4 @@ input{
   color: rgba(251, 13, 13, 0.442);
   font-size: .7rem;
   padding: .3rem 0;
-}
+} */
